Clean uo the source code.